bk_ida/gccida/c3/skip_whitespace
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/skip_whitespace/src/cpplex.c:814:23: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
int  skip_whitespace( cpp_reader_0 *pfile, cppchar_t c) 
                      ^~~~~~~~~~~~
                      cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/skip_whitespace/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/skip_whitespace/src/cpplex.c:819:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // [rsp+10h] [rbp-20h] 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/skip_whitespace/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/skip_whitespace/src/cpplex.c:860:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[( unsigned __int8)c] & 0x800) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/skip_whitespace/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/skip_whitespace/src/obj/cpplex.o] Error 1
